# CUDA-NUMA-extension

./: CMakeLists.txt  LICENSE  README.md  source.sh
data/: .p1a1-3.csv.swp  alloc.csv  alloc2.csv  bw.csv  h2h.csv  p0a0-4.csv  p0a1-4.csv  p1a0-4.csv  p1a1-4.csv
data/migration-compare/data/: Makefile  hwloc-vs-old.aux  hwloc-vs-old.tex
doc/plots/: alloc-plots.py  bw-plots.py  hwloc-vs-old.tex  perfetch-plots.py  prefetch-plots.py
doc/presentation/: cppex-presentation.odp
doc/report/abgabe/: analysis.aux  aufgabenstellung.aux  basics.aux  conclusion.aux  conclusion.tex  entwicklung.aux  environment.aux  environment.tex  eval.aux  eval.tex  grundlage.aux  implementation.aux  implementation.tex  motivation.aux  motivation.tex  projekt.sty  report.aux  report.bbl  report.bib  report.blg  report.ist  report.out  report.tex  report.toc  target.aux  target.tex  technik.aux  validierung.aux
src/deprecated/: Makefile  _migration.h  ftt  hwloc-test.cpp  numa_allocator.h  pmt  run_benchmarks.sh  test-numa-interface.cu
src/deprecated/benchmarks/: access-benchmark.cpp  migration-benchmark.cpp  run_access.sh  run_distribute.sh  run_page_migration.sh  run_stencil.sh  stencil.cpp
src/deprecated/container/: ndist.h  numavec.cpp  numavec.h  nvector.h
src/hacks/: Makefile  ftt.slurm  hwloc-corepin.cpp  managed-mem-hwloc.cu  test-managed-mem.slurm
src/interface/: numa-interface.h
src/migration/: Makefile  migration.h  test-migration.cpp
src/tests/: .alloc.cu.swp  alloc.cu  app-benchmark.cu  h2hbw.cu
